[tool.poetry]
name = "fastapi-sqlmodel-async-alembic"
version = "0.1.0"
description = ""
authors = ["zcemycl <lyc010197@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_sqlmodel_async_alembic"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
sqlmodel = "^0.0.8"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
